need to commit more often

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    <title>Contact</title>
 </head>
+
 <body>
-    <h1>Contact</h1>
-</body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+
+            <a class="navbar-brand color: text-white" href="#">Myrna Cantando</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+
+                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+
+                    <li class="nav-item">
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container text-#4aaaa5">
+
+
+
+    </div>
+
+    </div>
+    </div>
+    <style>
+        .button {
+            background-color: #4aaaa5;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
+
+    <body>
+
+        <div class="container text-#4aaaa5">
+            <div class="row">
+                <div class="col-8 bg-white mt-4 ">
+
+                    <h1>Contact </h1>
+                    <hr>
+
+                    <div class="row">
+                        <div class="col md-12">
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input type="text" class="form-control">
+
+                            </div>
+
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="text" class="form-control">
+                            </div>
+
+                            <div class="form-group">
+                                <label>Message</label>
+                                <textarea class="form-control" rows="5"></textarea>
+                            </div>
+
+                            <div class="form-group">
+                                <button class="button">Submit</button>
+                                <wpc </div>
+
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer bg-dark align-center">
+            <div class="container text-white text-center">
+                <p class="pt-4 pb-4">Copyright © 2020</p>
+            </div>
+
+
+        </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </body>
+
 </html>
